--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -11,3 +11,11 @@ db {
   password = ""
   user = ${?DB_PASS}
 }
+
+tg {
+  token = ""
+  token = ${BOT_TOKEN}
+}
+
+audio-store-path = ""
+audio-store-path = ${?AUDIO_STORE_PATH}
