--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -2,10 +2,10 @@
 db {
   driver = "org.postgresql.Driver"
 
-  url = "jdbc:postgresql://localhost:5432/abathur"
+  url = "jdbc:postgresql://localhost:5432/adjutant"
   url = ${?DB_URL}
 
-  user = "abathur"
+  user = "adjutant"
   user = ${?DB_USER}
 
   password = ""
