--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -25,3 +25,15 @@ jobs:
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: sbt -Dsonar.login=$SONAR_TOKEN sonarScan
+
+    - name: Assemble
+      run: sbt "clean; set test in assembly := {}; assembly"
+
+    - name: Upload to the server
+      uses: garygrossgarten/github-action-scp@release
+      with:
+        local: target/scala-2.13/adjutant-assembly-0.1.jar
+        remote: /tmp/${{ github.sha }}.jar
+        host: ${{ secrets.SSH_HOST }}
+        username: ${{ secrets.SSH_USER }}
+        password: ${{ secrets.SSH_PASS }}
